welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: type mismatch;
 found   : Unit
 required: Int
			j = j + 1
                          ^